feat: finsihed api

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -8,5 +8,6 @@ DB_PASSWORD=postgres
 DB_USERNAME=postgres
 
 FRONTEND_URL="http://localhost:3000/"
+DATABASE_URL="postgresql://postgres:postgres@db:5432/postgres?schema=SCHEMA"
 
 PRISMA_STUDIO_PORT=5555
