--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "npm run db:deploy && prisma:seed && nest start --watch",
-    "start:debug": "npm run db:deploy && prisma:seed && nest start --debug 0.0.0.0:9229 --watch",
+    "start:dev": "npm run db:deploy && nest start --watch",
+    "start:debug": "npm run db:deploy && nest start --debug 0.0.0.0:9229 --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
