feat: add BUILD_TARGET env for docker compose

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-      target: debug
+      target: ${BUILD_TARGET}
     volumes:
       - .:/src
       - /src/node_modules
