--- a/backend/.example.env
+++ b/backend/.example.env
@@ -10,4 +10,6 @@ DB_USERNAME=postgres
 FRONTEND_URL="http://localhost:3000/"
 DATABASE_URL="postgresql://postgres:postgres@db:5432/postgres?schema=SCHEMA"
 
+BUILD_TARGET=development
+
 PRISMA_STUDIO_PORT=5555
