--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/src
       - /src/node_modules
+        - build:/src/build
     env_file:
       - .env
     ports:
