--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "npm run db:deploy && nest start --watch",
     "start:debug": "npm run db:deploy && nest start --debug 0.0.0.0:9229 --watch",
-    "start:prod": "node build/main",
+    "start:prod": "npx prisma migrate deploy && node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
